syntax = "proto3";

import "google/protobuf/empty.proto";

package integrationtest;

message GetForecastRequest {
  string city = 1;
  reserved 2 to 4;
  int32 days_required = 5;
}

message GetForecastResponse {
  enum Weather {
    SUNNY = 0;
    CLOUDY = 1;
    RAINY = 2;
  }

  string last_updated = 1;
  repeated Weather daily_forecasts = 2;
}

message RainEvent {
  enum RainEventType {
    STARTED = 0;
    STOPPED = 1;
  }

  string city = 1;
  RainEventType event_type = 2;
}

message RainSummaryResponse {
  int32 rained_count = 1;
}

message SubscribeToRainEventsRequest {
  string city = 1;
}

service WeatherService {

  rpc ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc getForecast(GetForecastRequest) returns (GetForecastResponse);

  rpc publishRainEvents(stream RainEvent) returns (RainSummaryResponse);

  rpc subscribeToRainEvents(SubscribeToRainEventsRequest) returns (stream RainEvent);

}
